--- a/platform/win32/libthirdparty.vcxproj.filters
+++ b/platform/win32/libthirdparty.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="gumbo-parser">
       <UniqueIdentifier>{0ab1930f-6f35-4f45-8d7a-70a5846c46ad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="libwebp">
+      <UniqueIdentifier>{69f5afe0-2f47-4eb6-b59e-bcb1766f13df}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\thirdparty\libjpeg\jaricom.c">
@@ -749,6 +752,147 @@
     </ClCompile>
     <ClCompile Include="..\..\thirdparty\libjpeg\jcsample.c">
       <Filter>libjpeg</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\alpha_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\buffer_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\frame_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\idec_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\io_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\quant_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\tree_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\vp8_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\vp8l_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dec\webp_dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\alpha_processing_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\alpha_processing_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\alpha_processing_sse41.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\alpha_processing.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\cpu.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\dec_clip_tables.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\dec_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\dec_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\dec_sse41.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\dec.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\filters_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\filters_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\filters.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\lossless_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\lossless_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\lossless_sse41.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\lossless.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\rescaler_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\rescaler_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\rescaler.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\upsampling_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\upsampling_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\upsampling_sse41.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\upsampling.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\yuv_neon.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\yuv_sse2.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\yuv_sse41.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\dsp\yuv.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\bit_reader_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\color_cache_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\huffman_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\quant_levels_dec_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\random_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\rescaler_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\thread_utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\utils\utils.c">
+      <Filter>libwebp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\libwebp\src\demux\demux.c">
+      <Filter>libwebp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
